--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "hyperdyperid": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0",
-    "nodemon": "^3.1.10"
+    "bcrypt": "6.0.0",
+    "cors": "2.8.5",
+    "dotenv": "17.0.1",
+    "express": "5.1.0",
+    "hyperdyperid": "1.2.0",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.16.1",
+    "nodemon": "3.1.10",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.1"
   }
 }
