--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "6.0.0",
@@ -17,8 +18,10 @@
     "hyperdyperid": "1.2.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.16.1",
-    "nodemon": "3.1.10",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.10"
   }
 }
